--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Maulik Patel" width="80" />
+          <img src="./assets/images/Maxx2.png" alt="Maulik Patel" width="80" />
         </figure>
 
         <div class="info-content">
@@ -178,7 +178,7 @@
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/architecture 2.png
                 " alt="design icon" width="40" />
               </div>
 
@@ -194,7 +194,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40" />
+                <img src="./assets/images/QA.png" alt="Web development icon" width="40" />
               </div>
 
               <div class="service-content-box">
@@ -209,7 +209,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40" />
+                <img src="./assets/images/Devops.png" alt="mobile app icon" width="40" />
               </div>
 
               <div class="service-content-box">
@@ -225,7 +225,7 @@
 
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40" />
+                <img src="./assets/images/Data Visualization.png" alt="camera icon" width="40" />
               </div>
 
               <div class="service-content-box">
@@ -471,7 +471,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/1.png" loading="lazy" style="width: 260px; height: 180px;" />
+                  <img src="./assets/images/Website s3.jpg" loading="lazy" style="width: 260px; height: 180px;" />
                 </figure>
 
                 <h3 class="project-title">Website on S3</h3>
@@ -487,7 +487,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/1.png" loading="lazy" style="width: 260px; height: 180px;" />
+                  <img src="./assets/images/QuickSight.png" loading="lazy" style="width: 260px; height: 180px;" />
                 </figure>
 
                 <h3 class="project-title">Data with Quick Sight</h3>
@@ -503,7 +503,8 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/2.png" alt="orizon" loading="lazy" style="width: 260px; height: 180px;" />
+                  <img src="./assets/images/vpc peering.png" alt="orizon" loading="lazy"
+                    style="width: 260px; height: 180px;" />
                 </figure>
 
                 <h3 class="project-title">VPC Peering</h3>
@@ -519,7 +520,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/6.png" alt="brawlhalla" loading="lazy"
+                  <img src="./assets/images/devops thumb.png" alt="brawlhalla" loading="lazy"
                     style="width: 260px; height: 180px;" />
                 </figure>
 
@@ -536,7 +537,8 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/4.png" alt="dsm." loading="lazy" style="width: 260px; height: 180px;" />
+                  <img src="./assets/images/devops thumb.png" alt="dsm." loading="lazy"
+                    style="width: 260px; height: 180px;" />
                 </figure>
 
                 <h3 class="project-title">Devops 2</h3>
